k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: weekplanner
  labels:
    name: weekplanner
