k8s/categories.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories
  namespace: weekplanner
  labels:
    app: categories
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: weekplanner
      labels:
        app: categories
        app.kubernetes.io/version: 1.2.0
        app.kubernetes.io/part-of: WeekPlanner
    spec:
      containers:
        - name: categories
          image: ghcr.io/ihudak/weekplanner-categories:latest
          ports:
            - containerPort: 8080
            - containerPort: 5005
          resources:
            limits:
              cpu: 500m
              memory: 768Mi
            requests:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: categories-svc
  namespace: weekplanner
spec:
  selector:
    app: categories
  type: ClusterIP # LoadBalancer
  ports:
    - name: http
      port: 82
      protocol: TCP
      targetPort: 8080
#      nodePort: 30008 # comment if ClusterIP
    - name: debug
      port: 5008
      protocol: TCP
      targetPort: 5005
#      nodePort: 32008 # comment if ClusterIP
