k8s/rest-api-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-test
  namespace: weekplanner
  labels:
    app: rest-api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-api-test
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: weekplanner
      labels:
        app: rest-api-test
        app.kubernetes.io/version: 1.2.0
        app.kubernetes.io/part-of: WeekPlanner
    spec:
      containers:
        - name: rest-api-test
          image: ivangudak096/rest-api-test:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api-test-svc
  namespace: weekplanner
spec:
  selector:
    app: rest-api-test
  type: ClusterIP # LoadBalancer
  ports:
    - port: 91
      protocol: TCP
      targetPort: 3000
#      nodePort: 30000 # comment if ClusterIP
