k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: weekplanner
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: weekplanner
      labels:
        app: web
        app.kubernetes.io/version: 1.2.0
        app.kubernetes.io/part-of: WeekPlanner
    spec:
      containers:
        - name: web
          image: ghcr.io/ihudak/weekplanner-web:latest
          ports:
            - containerPort: 4200
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: weekplanner
spec:
  selector:
    app: web
  type: ClusterIP # LoadBalancer
  ports:
    - port: 90
      protocol: TCP
      targetPort: 4200
#      nodePort: 30000 # comment if ClusterIP
