k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weekplanner-ingress
  namespace: weekplanner
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api/tasks/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tasks-svc
                port:
                  number: 83
          - path: /api/categories/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: categories-svc
                port:
                  number: 82
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-svc
                port:
                  number: 81
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-svc
                port:
                  number: 90
